java/versioned_docs/version-1.18/api/class-tracing.mdx
---
id: class-tracing
title: "Tracing"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

API for collecting and saving Playwright traces. Playwright traces can be opened in [Trace Viewer](./trace-viewer.mdx) after Playwright script runs.

Start recording a trace before performing actions. At the end, stop tracing and save it to a file.

```java
Browser browser = chromium.launch();
BrowserContext context = browser.newContext();
context.tracing().start(new Tracing.StartOptions()
  .setScreenshots(true)
  .setSnapshots(true));
Page page = context.newPage();
page.navigate("https://playwright.dev");
context.tracing().stop(new Tracing.StopOptions()
  .setPath(Paths.get("trace.zip")));
```


- [Tracing.start([options])](./api/class-tracing.mdx#tracing-start)
- [Tracing.startChunk([options])](./api/class-tracing.mdx#tracing-start-chunk)
- [Tracing.stop([options])](./api/class-tracing.mdx#tracing-stop)
- [Tracing.stopChunk([options])](./api/class-tracing.mdx#tracing-stop-chunk)

## Tracing.start([options]) {#tracing-start}
- `options` &#60;`Tracing.StartOptions`&#62;
  - `setName`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="tracing-start-option-name"/> &#60;[String]&#62; If specified, the trace is going to be saved into the file with the given name inside the `tracesDir` folder specified in [BrowserType.launch([options])](./api/class-browsertype.mdx#browser-type-launch).<a href="#tracing-start-option-name" class="list-anchor">#</a>
  - `setScreenshots`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="tracing-start-option-screenshots"/> &#60;[boolean]&#62; Whether to capture screenshots during tracing. Screenshots are used to build a timeline preview.<a href="#tracing-start-option-screenshots" class="list-anchor">#</a>
  - `setSnapshots`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="tracing-start-option-snapshots"/> &#60;[boolean]&#62; Whether to capture DOM snapshot on every action.<a href="#tracing-start-option-snapshots" class="list-anchor">#</a>
  - `setSources`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="tracing-start-option-sources"/> &#60;[boolean]&#62; Whether to include source files for trace actions. List of the directories with source code for the application must be provided via `PLAYWRIGHT_JAVA_SRC` environment variable.<a href="#tracing-start-option-sources" class="list-anchor">#</a>
  - `setTitle`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="tracing-start-option-title"/> &#60;[String]&#62; Trace name to be shown in the Trace Viewer.<a href="#tracing-start-option-title" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="tracing-start-return"/> &#60;[void]&#62;<a href="#tracing-start-return" class="list-anchor">#</a>

Start tracing.

```java
context.tracing().start(new Tracing.StartOptions()
  .setScreenshots(true)
  .setSnapshots(true));
Page page = context.newPage();
page.navigate("https://playwright.dev");
context.tracing().stop(new Tracing.StopOptions()
  .setPath(Paths.get("trace.zip")));
```

## Tracing.startChunk([options]) {#tracing-start-chunk}
- `options` &#60;`Tracing.StartChunkOptions`&#62;
  - `setTitle`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="tracing-start-chunk-option-title"/> &#60;[String]&#62; Trace name to be shown in the Trace Viewer.<a href="#tracing-start-chunk-option-title" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="tracing-start-chunk-return"/> &#60;[void]&#62;<a href="#tracing-start-chunk-return" class="list-anchor">#</a>

Start a new trace chunk. If you'd like to record multiple traces on the same [BrowserContext], use [Tracing.start([options])](./api/class-tracing.mdx#tracing-start) once, and then create multiple trace chunks with [Tracing.startChunk([options])](./api/class-tracing.mdx#tracing-start-chunk) and [Tracing.stopChunk([options])](./api/class-tracing.mdx#tracing-stop-chunk).

```java
context.tracing().start(new Tracing.StartOptions()
  .setScreenshots(true)
  .setSnapshots(true));
Page page = context.newPage();
page.navigate("https://playwright.dev");

context.tracing().startChunk();
page.click("text=Get Started");
// Everything between startChunk and stopChunk will be recorded in the trace.
context.tracing().stopChunk(new Tracing.StopChunkOptions()
  .setPath(Paths.get("trace1.zip")));

context.tracing().startChunk();
page.navigate("http://example.com");
// Save a second trace file with different actions.
context.tracing().stopChunk(new Tracing.StopChunkOptions()
  .setPath(Paths.get("trace2.zip")));
```

## Tracing.stop([options]) {#tracing-stop}
- `options` &#60;`Tracing.StopOptions`&#62;
  - `setPath`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="tracing-stop-option-path"/> &#60;[Path]&#62; Export trace into the file with the given path.<a href="#tracing-stop-option-path" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="tracing-stop-return"/> &#60;[void]&#62;<a href="#tracing-stop-return" class="list-anchor">#</a>

Stop tracing.

## Tracing.stopChunk([options]) {#tracing-stop-chunk}
- `options` &#60;`Tracing.StopChunkOptions`&#62;
  - `setPath`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="tracing-stop-chunk-option-path"/> &#60;[Path]&#62; Export trace collected since the last [Tracing.startChunk([options])](./api/class-tracing.mdx#tracing-start-chunk) call into the file with the given path.<a href="#tracing-stop-chunk-option-path" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="tracing-stop-chunk-return"/> &#60;[void]&#62;<a href="#tracing-stop-chunk-return" class="list-anchor">#</a>

Stop the trace chunk. See [Tracing.startChunk([options])](./api/class-tracing.mdx#tracing-start-chunk) for more details about multiple trace chunks.

[APIRequest]: ./api/class-apirequest.mdx "APIRequest"
[APIRequestContext]: ./api/class-apirequestcontext.mdx "APIRequestContext"
[APIResponse]: ./api/class-apiresponse.mdx "APIResponse"
[APIResponseAssertions]: ./api/class-apiresponseassertions.mdx "APIResponseAssertions"
[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[FormData]: ./api/class-formdata.mdx "FormData"
[Frame]: ./api/class-frame.mdx "Frame"
[FrameLocator]: ./api/class-framelocator.mdx "FrameLocator"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Locator]: ./api/class-locator.mdx "Locator"
[LocatorAssertions]: ./api/class-locatorassertions.mdx "LocatorAssertions"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[PageAssertions]: ./api/class-pageassertions.mdx "PageAssertions"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[PlaywrightAssertions]: ./api/class-playwrightassertions.mdx "PlaywrightAssertions"
[PlaywrightException]: ./api/class-playwrightexception.mdx "PlaywrightException"
[Request]: ./api/class-request.mdx "Request"
[RequestOptions]: ./api/class-requestoptions.mdx "RequestOptions"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Tracing]: ./api/class-tracing.mdx "Tracing"
[Video]: ./api/class-video.mdx "Video"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[WebSocketFrame]: ./api/class-websocketframe.mdx "WebSocketFrame"
[Worker]: ./api/class-worker.mdx "Worker"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[EvaluationArgument]: ./evaluating.mdx#evaluation-argument "EvaluationArgument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[boolean]: https://docs.oracle.com/javase/tutorial/java/nutsandbolts/datatypes.html "boolean"
[byte&#91;&#93;]: https://docs.oracle.com/javase/tutorial/java/nutsandbolts/datatypes.html "byte[]"
[Consumer]: https://docs.oracle.com/javase/8/docs/api/java/util/function/Consumer.html "Consumer"
[double]: https://docs.oracle.com/javase/tutorial/java/nutsandbolts/datatypes.html "double"
[InputStream]: https://docs.oracle.com/javase/8/docs/api/java/io/InputStream.html "InputStream"
[int]: https://docs.oracle.com/javase/tutorial/java/nutsandbolts/datatypes.html "int"
[List]: https://docs.oracle.com/javase/8/docs/api/java/util/List.html "List"
[Map]: https://docs.oracle.com/javase/8/docs/api/java/util/Map.html "Map"
[null]: https://docs.oracle.com/javase/specs/jls/se8/html/jls-3.html#jls-3.10.7 "null"
[Object]: https://docs.oracle.com/javase/8/docs/api/java/lang/Object.html "Object"
[Path]: https://docs.oracle.com/javase/8/docs/api/java/nio/file/Path.html "Path"
[Pattern]: https://docs.oracle.com/javase/8/docs/api/java/util/regex/Pattern.html "Pattern"
[Predicate]: https://docs.oracle.com/javase/8/docs/api/java/util/function/Predicate.html "Predicate"
[void]: https://docs.oracle.com/javase/tutorial/java/javaOO/methods.html "void"
[Runnable]: https://docs.oracle.com/javase/8/docs/api/java/lang/Runnable.html "Runnable"
[RuntimeException]: https://docs.oracle.com/javase/8/docs/api/java/lang/RuntimeException.html "RuntimeException"
[String]: https://docs.oracle.com/javase/8/docs/api/java/lang/String.html "String"

[all available image tags]: https://mcr.microsoft.com/v2/playwright/java/tags/list "all available image tags"
[Docker Hub]: https://hub.docker.com/_/microsoft-playwright-java "Docker Hub"
[Dockerfile.focal]: https://github.com/microsoft/playwright-java/blob/master/Dockerfile.focal "Dockerfile.focal"
